Hero Section Finished

--- a/index.html
+++ b/index.html
@@ -16,14 +16,24 @@
     <div class="header">
 
       <div class="nav-menu">
-        <div class="header-logo">Ducky Obrien</div>
+        <div class="header-logo"><img src="./images/ducky_logo_header.png" alt="ducky obrien logo">Ducky Obrien</div>
         <div class="nav-links">
           <ul>
             <li><a href="https://www.youtube.com/user/bagajutsu">Videos</a></li>
             <li><a href="https://www.twitch.tv/duckyobrien">Twitch</a></li>
             <li><a href="https://the-pointy-hat-cast.pinecast.co/">Podcasts</a></li>
-            
           </ul>
+        </div>
+      </div>
+
+      <div class="hero-box">
+        <div class="hero-text">
+          <div class="hero-header">This website is awesome</div>
+          <div class="hero-body">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</div>
+          <div class="hero-button"><button class="hero-butt" type="button" onclick="window.location.href='https://www.twitch.tv/duckyobrien';">Watch Me Live!</button>
+          </div>
+        </div>
+        <div class="hero-img"><img src="./images/hero_banner_img.png" alt="hero banner image">
         </div>
       </div>
 
