Adjustments to Hero Box
Added gap of 50px between hero image and hero text box.

--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
 
       <div class="hero-box">
         <div class="hero-text">
-          <div class="hero-header">This website is awesome</div>
-          <div class="hero-body">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast.</div>
+          <div class="hero-header">Hello There!</div>
+          <div class="hero-body">I stream a lot of video games, web dev, and just chatting. Currently playing a lot of Apex, Back 4 Blood, and learning how to be a Front End Developer. Feel free to drop by!</div>
           <div class="hero-button"><button class="hero-butt" type="button" onclick="window.location.href='https://www.twitch.tv/duckyobrien';">Watch Me Live!</button>
           </div>
         </div>
