Added info gallery section
Added html, images, and css for the info gallery section. Deez nuts.

--- a/index.html
+++ b/index.html
@@ -38,6 +38,34 @@
       </div>
 
     </div>
-    <p>Test</p>
+
+    <div class="infogallery">
+      
+      <div class="infogalheader">Dietz Nuts Gallery</div>
+      
+      <div class="infogalcontainer">
+        <div class="infogalnut">
+          <img class="infogalimg" src="./images/infogal_1.png" alt="gottem">
+          <div class="infogaltext">Dietz Nuts will never give you up, never let you down.</div>
+        </div>
+        <div class="infogalnut">
+          <img class="infogalimg" src="./images/infogal_2.png" alt="gottem again">
+          <div class="infogaltext">You can put Dietz Nuts in your mouth or hold them in your hands.</div>
+        </div>
+        <div class="infogalnut">
+          <img class="infogalimg" src="./images/infogal_3.png" alt="got got">
+          <div class="infogaltext">Everybody loves Dietz Nuts, even your mom.</div>
+        </div>
+        <div class="infogalnut">
+          <img class="infogalimg" src="./images/infogal_4.png" alt="deez nuts">
+          <div class="infogaltext">Dietz Nuts are life changing, get Dietz Nuts into your life right now!</div>
+        </div>
+      </div>
+
+    </div>
+
+    <div class="qoutecontainer">
+    </div>
+
   </body>
 </html>
