Completed Quote Box, Call to Action, and Footer
Call to action links to blog. Added CSS to have button display an arrow upon hovering.

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <link rel="stylesheet" href="./css/styles.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet"> 
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet"> 
 
     <title>Ducky Obrien</title>
   </head>
@@ -21,6 +21,7 @@
           <ul>
             <li><a href="https://www.youtube.com/user/bagajutsu">Videos</a></li>
             <li><a href="https://www.twitch.tv/duckyobrien">Twitch</a></li>
+            <li><a href="https://duckyobrien.com/">Blog</a>
             <li><a href="https://the-pointy-hat-cast.pinecast.co/">Podcasts</a></li>
           </ul>
         </div>
@@ -65,7 +66,22 @@
     </div>
 
     <div class="qoutecontainer">
+      <div class="qoutemain">
+        <div class="qoutebody">Teemo is the true meta. Teemo is the true meta. Teemo is the true meta. Teemo is the true meta. Teemo is the true meta. Teemo is the true meta. Teemo is the true meta.</div>
+        <div class="qouteperson">- Caramel Corn22</div>
+      </div>
     </div>
 
+    <div class="calltoaction">
+      <div class="signupbox">
+        <div class="signupboxbody">
+          <div class="signuptitle">I write blogs!</div>
+          <div class="signuptext">Check out my video game blog for news, reviews, guides, and more!</div>
+        </div> 
+        <button type="button" style="vertical-align:middle" class="signupbutt"><span><a href="https://duckyobrien.com/">Game Blog</a></span></button>
+      </div>
+    </div>
+
+    <div class="footer">Copyright © Ducky Obrien 2022</div>
   </body>
 </html>
